# backend/app/db/generated/models.py
@@ -28,6 +28,30 @@ class FlywaySchemaHistory(Base):
     checksum: Mapped[Optional[int]] = mapped_column(Integer)
 
 
+class ForwarderLogs(Base):
+    __tablename__ = 'forwarder_logs'
+    __table_args__ = (
+        PrimaryKeyConstraint('id', name='forwarder_logs_pkey'),
+        Index('idx_forwarder_logs_created_at', 'created_at')
+    )
+
+    id: Mapped[str] = mapped_column(Text, primary_key=True)
+    payload_json: Mapped[dict] = mapped_column(JSONB, nullable=False)
+    created_at: Mapped[datetime.datetime] = mapped_column(DateTime(True), nullable=False, server_default=text('now()'))
+
+
+class MarketplaceEvents(Base):
+    __tablename__ = 'marketplace_events'
+    __table_args__ = (
+        PrimaryKeyConstraint('id', name='marketplace_events_pkey'),
+        Index('idx_marketplace_events_created_at', 'created_at')
+    )
+
+    id: Mapped[str] = mapped_column(Text, primary_key=True)
+    payload_json: Mapped[dict] = mapped_column(JSONB, nullable=False)
+    created_at: Mapped[datetime.datetime] = mapped_column(DateTime(True), nullable=False, server_default=text('now()'))
+
+
 class Releases(Base):
     __tablename__ = 'releases'
     __table_args__ = (
@@ -54,17 +78,6 @@ class Runs(Base):
     updated_at: Mapped[datetime.datetime] = mapped_column(DateTime(True), nullable=False, server_default=text('now()'))
 
 
-class Targets(Base):
-    __tablename__ = 'targets'
-    __table_args__ = (
-        PrimaryKeyConstraint('id', name='targets_pkey'),
-    )
-
-    id: Mapped[str] = mapped_column(Text, primary_key=True)
-    payload_json: Mapped[dict] = mapped_column(JSONB, nullable=False)
-    updated_at: Mapped[datetime.datetime] = mapped_column(DateTime(True), nullable=False, server_default=text('now()'))
-
-
 class TargetRegistrations(Base):
     __tablename__ = 'target_registrations'
     __table_args__ = (
@@ -77,13 +90,12 @@ class TargetRegistrations(Base):
     updated_at: Mapped[datetime.datetime] = mapped_column(DateTime(True), nullable=False, server_default=text('now()'))
 
 
-class MarketplaceEvents(Base):
-    __tablename__ = 'marketplace_events'
+class Targets(Base):
+    __tablename__ = 'targets'
     __table_args__ = (
-        PrimaryKeyConstraint('id', name='marketplace_events_pkey'),
-        Index('idx_marketplace_events_created_at', 'created_at')
+        PrimaryKeyConstraint('id', name='targets_pkey'),
     )
 
     id: Mapped[str] = mapped_column(Text, primary_key=True)
     payload_json: Mapped[dict] = mapped_column(JSONB, nullable=False)
-    created_at: Mapped[datetime.datetime] = mapped_column(DateTime(True), nullable=False, server_default=text('now()'))
+    updated_at: Mapped[datetime.datetime] = mapped_column(DateTime(True), nullable=False, server_default=text('now()'))
